kubernetes-hw/08/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-https
  template:
    metadata:
      labels:
        app: nginx-https
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 443
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: certs-volume
          mountPath: /etc/nginx/certs
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
          items:
          - key: index.html
            path: index.html
      - name: certs-volume
        secret:
          secretName: nginx-ssl
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: default.conf
            path: default.conf
