kubernetes-hw/08/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-app
  ports:
    - name: nginx-port
      port: 80
      targetPort: 80
    - name: multitool-port
      port: 8080
      targetPort: 8080
  type: NodePort
