kubernetes-hw/08/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-https-service
spec:
  selector:
    app: nginx-https
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
