kubernetes-hw/08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-https-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - wrk-ssilchin
    secretName: nginx-ssl
  rules:
  - host: wrk-ssilchin
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-https-service
            port:
              number: 443
